crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__struct_to_interface_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

/** A registered user */
export interface User {
  id: number;
  name: string;
  email: string;
  bio?: string | undefined;
}
