crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__struct_validation_contains_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

export interface User {
  id: number;
  email: string;
}

export class ValidationError extends Error {
  constructor(message: string) {
    super(message);
    this.name = "ValidationError";
  }
}

export function validateUser(input: unknown): User {
  if (typeof input !== "object" || input === null)
    throw new ValidationError("expected object");
  const obj = input as Record<string, unknown>;
  if (typeof obj.id !== "number")
    throw new ValidationError("id: expected number");
  if (typeof obj.email !== "string")
    throw new ValidationError("email: expected string");
  if (!(obj.email.includes("@") && obj.email.length > 3))
    throw new ValidationError("email: constraint violated");
  return obj as unknown as User;
}
