crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__tagged_enum_to_union_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

export type Shape =
  | { tag: "Circle"; value: number }
  | { tag: "Rect"; value: [number, number] }
  | { tag: "Point" };
