crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__ts_fastify_server_full_surface.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import type { FastifyPluginCallback } from "fastify";
import type { Handlers } from "./handlers";
import {
  ValidationError,
  validateCreateUserBody,
  validateUpsertUserBody,
} from "./types";
import type { CreateNoteBody, UploadAvatarBody } from "./types";

// A multipart middleware (multer, busboy, …) must be mounted upstream; it
// populates these fields on the request. Scalar form fields arrive on
// `body`; each uploaded file is expected as a `Blob` on `files`, keyed by
// field name. NOTE: standard parsers do not produce `Blob`s directly —
// multer's memory storage, for example, yields `{ buffer, originalname }`
// per field — so mount a tiny adapter that maps each parsed file to a
// `Blob`, e.g.:
//   const blobFiles: Record<string, Blob> = {};
//   for (const [field, parts] of Object.entries(request.files ?? {}))
//     blobFiles[field] = new Blob([parts[0].buffer]);
//   (request as unknown as MultipartRequest).files = blobFiles;
// (The original filename is not carried on a `Blob`; see the project docs.)
interface MultipartRequest {
  body: Record<string, string>;
  files: Record<string, Blob>;
}

export function createRouter(handlers: Handlers): FastifyPluginCallback {
  return (app, _opts, done) => {
    app.get("/users/:id", async (request, reply) => {
      try {
        const params = request.params as { id: string };
        const id = params.id;
        const result = await handlers.getUser(id);
        reply.send(result);
      } catch (error: unknown) {
        if (error instanceof Error) {
          if (error.message === "NotFound") {
            reply.status(404).send({ error: "NotFound" });
            return;
          }
        }
        reply.status(500).send({ error: "Internal Server Error" });
      }
    });

    app.post("/users", async (request, reply) => {
      try {
        const body = validateCreateUserBody(request.body);
        const result = await handlers.createUser(body);
        reply.send(result);
      } catch (error: unknown) {
        if (error instanceof ValidationError) {
          reply.status(400).send({ error: error.message });
          return;
        }
        if (error instanceof Error) {
          if (error.message === "Conflict") {
            reply.status(409).send({ error: "Conflict" });
            return;
          }
        }
        reply.status(500).send({ error: "Internal Server Error" });
      }
    });

    app.post("/notes", async (request, reply) => {
      try {
        const body = request.body as CreateNoteBody;
        const result = await handlers.createNote(body);
        reply.send(result);
      } catch {
        reply.status(500).send({ error: "Internal Server Error" });
      }
    });

    app.get("/users", async (request, reply) => {
      try {
        const rawQuery = request.query as Record<string, string | undefined>;
        const query = {
          page: rawQuery.page !== undefined ? Number(rawQuery.page) : 1,
          q: rawQuery.q,
          active:
            rawQuery.active !== undefined ? rawQuery.active === "true" : true,
        };
        const result = await handlers.listUsers(query);
        reply.send(result);
      } catch {
        reply.status(500).send({ error: "Internal Server Error" });
      }
    });

    app.patch("/users/:id", async (request, reply) => {
      try {
        const params = request.params as { id: string };
        const id = params.id;
        const rawHeaders = request.headers as Record<
          string,
          string | undefined
        >;
        const headers = {
          authorization: rawHeaders["authorization"] as string,
          trace: rawHeaders["x-trace"],
        };
        const result = await handlers.patchUser(id, headers);
        reply.header("X-Rate-Remaining", String(result.remaining));
        reply.send(result.body);
      } catch {
        reply.status(500).send({ error: "Internal Server Error" });
      }
    });

    app.put("/users/:id", async (request, reply) => {
      try {
        const params = request.params as { id: string };
        const id = params.id;
        const body = validateUpsertUserBody(request.body);
        const result = await handlers.upsertUser(id, body);
        if (![200, 201, 204].includes(result.status)) {
          reply
            .status(500)
            .send({ error: "handler returned undeclared status" });
          return;
        }
        if ([200, 201].includes(result.status) && result.body === undefined) {
          reply
            .status(500)
            .send({ error: "handler returned no body for a typed status" });
          return;
        }
        if ([204].includes(result.status) && result.body !== undefined) {
          reply
            .status(500)
            .send({ error: "handler returned a body for a bodyless status" });
          return;
        }
        if (result.body !== undefined) {
          reply.status(result.status).send(result.body);
        } else {
          reply.status(result.status).send();
        }
      } catch (error: unknown) {
        if (error instanceof ValidationError) {
          reply.status(400).send({ error: error.message });
          return;
        }
        reply.status(500).send({ error: "Internal Server Error" });
      }
    });

    app.post("/users/:id/avatar", async (request, reply) => {
      try {
        const params = request.params as { id: string };
        const id = params.id;
        const multipart = request as unknown as MultipartRequest;
        const body: UploadAvatarBody = {
          avatar: multipart.files.avatar,
          caption: multipart.body.caption,
        };
        const result = await handlers.uploadAvatar(id, body);
        reply.send(result);
      } catch {
        reply.status(500).send({ error: "Internal Server Error" });
      }
    });

    app.get("/docs/:id", async (request, reply) => {
      try {
        const params = request.params as { id: string };
        const id = params.id;
        const result = await handlers.downloadDoc(id);
        reply.header("Content-Type", "application/octet-stream");
        reply.send(result);
      } catch {
        reply.status(500).send({ error: "Internal Server Error" });
      }
    });

    app.delete("/users/:id", async (request, reply) => {
      try {
        const params = request.params as { id: string };
        const id = params.id;
        await handlers.deleteUser(id);
        reply.status(204).send();
      } catch (error: unknown) {
        if (error instanceof Error) {
          if (error.message === "NotFound") {
            reply.status(404).send({ error: "NotFound" });
            return;
          }
        }
        reply.status(500).send({ error: "Internal Server Error" });
      }
    });

    done();
  };
}
