crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__validation_optional_types.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

export interface User {
  id: number;
  name: string;
  age: number;
}

export class ValidationError extends Error {
  constructor(message: string) {
    super(message);
    this.name = "ValidationError";
  }
}

export function validateUser(input: unknown): User {
  if (typeof input !== "object" || input === null)
    throw new ValidationError("expected object");
  const obj = input as Record<string, unknown>;
  if (typeof obj.id !== "number")
    throw new ValidationError("id: expected number");
  if (typeof obj.name !== "string")
    throw new ValidationError("name: expected string");
  if (!(obj.name.length > 0))
    throw new ValidationError("name: constraint violated");
  if (typeof obj.age !== "number")
    throw new ValidationError("age: expected number");
  if (!(obj.age >= 0)) throw new ValidationError("age: constraint violated");
  return obj as unknown as User;
}

export type UpdateUserBody = {
  name?: string;
  age?: number;
};

export function validateUpdateUserBody(input: unknown): UpdateUserBody {
  if (typeof input !== "object" || input === null)
    throw new ValidationError("expected object");
  const obj = input as Record<string, unknown>;
  if (obj.name !== undefined && typeof obj.name !== "string")
    throw new ValidationError("name: expected string");
  if (obj.name !== undefined && !(obj.name.length > 0))
    throw new ValidationError("name: constraint violated");
  if (obj.age !== undefined && typeof obj.age !== "number")
    throw new ValidationError("age: expected number");
  if (obj.age !== undefined && !(obj.age >= 0))
    throw new ValidationError("age: constraint violated");
  return obj as unknown as UpdateUserBody;
}
