crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__void_response_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async deleteUser(id: string): Promise<void> {
    const response = await fetch(`${baseUrl}/api/users/${id}`, {
      method: "DELETE",
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    await response.body?.cancel().catch(() => undefined);
  },
};
